# zen-editor

./: .gitignore  Cargo.toml  README.md  clippy.toml
.github/workflows/: release.yml
crates/editor/: Cargo.toml
crates/editor/src/: lib.rs
crates/editor/src/editor/: editor.rs  editor_core.rs  fileinfo.rs  gui.rs  key_bindings.rs  mod.rs  pane.rs  services.rs
crates/registers/: Cargo.toml
crates/registers/src/: event.rs  lib.rs
crates/registers/src/registers/: mod.rs
crates/top_menu/: Cargo.toml
crates/top_menu/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: buttons.rs  icons.rs  lib.rs  styles.rs
crates/zen/: Cargo.toml  README.md
crates/zen-core/: Cargo.toml
crates/zen-core/src/: lib.rs
crates/zen/fonts/fontello/: config.json
crates/zen/fonts/fontello/font/: fontello.eot
crates/zen/src/: main.rs
crates/zen/wix/: main.wxs
crates/zen_core/: Cargo.toml
fontello/fontello-0ebad8b4/: config.json  demo.html
fontello/fontello-0ebad8b4/css/: fontello-codes.css  fontello-embedded.css  fontello-ie7-codes.css  fontello-ie7.css  fontello.css
wix/: main.wxs
