[package]
name = "registers"
metadata.workspace = true
version.workspace = true
edition.workspace = true
description.workspace = true
publish.workspace = true
authors.workspace = true
license-file.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
iced.workspace = true

[lints]
workspace = true
