[package]
name = "zen-core"
version.workspace = true
edition.workspace = true
description.workspace = true
publish.workspace = true
authors.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
registers = { path = "../registers" }
editor = { path = "../editor" }
top_menu = { path = "../top_menu" }
iced.workspace = true
inline_tweak.workspace = true

[lints]
workspace = true
