[package]
name = "zen"
version = "0.0.1"
edition = "2021"
description = "The iced-rs code editor."
publish = true
authors = ["Andy Garcia <agf030124@gmail.com>"]
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/agf030124/zen-editor"
repository = "https://github.com/agf030124/zen-editor"

[package.metadata.wix]
upgrade-guid = "8AEDADF7-2614-41A9-B4C6-9EE9C1039FAD"
path-guid = "B46E93FD-F1C6-4973-9B46-18CDE371BE65"
license = false
eula = false

[[bin]]
name = "zen"
path = "src/main.rs"

[dependencies]
iced.workspace = true
zen-core = { path = "../zen-core" }

[lints]
workspace = true
